# timm_ed_dali

./: .gitignore  INTERACTIVERUN.md  README.md  config.sh  config_old.sh  finetune.py  finetune_dali.py  finetune_pytorch.py  main_config.sh  portiontossd_pretrain.py  pretrain.py  pretrain_dali.py  spawnRender_pretrain.py  ssd  ssdb
benchmarks/: .python-version  Fractal2D.py  dist_bench.py  dist_bench_batched.py  mpishared.py  nodist_bench.py  pretrain_speed.py  toramtest.py
benchmarks/scripts/: copy_speed.sh  speed_dali.sh  speed_ffcv.sh  speed_pytorch.sh  speed_test.sh  speed_wds.sh  tar_speed.sh
dali/: pipe_finetune.py  pipe_train.py
dataloaders/ffcv/: write_datasets.py
dataloaders/ffcv/scripts/: benchmarks.sh  fdb1k.sh
dataloaders/webdatasets/: .python-version  makeshard_with_tarwriter.py  nfs
dataloaders/webdatasets/scripts/: benchmarks.sh  fdb-1k.sh
legacy/: finetune_dali.py  pretrain_dali.py  pretrain_pytorch.py
legacy/scripts_abci-2.0/: benchspeed_deit_tiny_fdb100k_pytorch_portionrender_v.sh  benchspeed_deit_tiny_fdb100k_pytorch_v.sh  benchspeed_deit_tiny_fdb21k_pytorch_wds_v.sh  benchspeed_deit_tiny_fdb50k_pytorch_wds_v.sh  finetune_dali_imnet_v.sh  finetune_dali_p30_v.sh  finetune_pytorch_flowers_v.sh  finetune_pytorch_imnet100_v.sh  finetune_pytorch_p30_v.sh  pretrain_deit_base_21ktest_pytorch_wds_v.sh  pretrain_deit_tiny_fdb1k_dali_render_to_ssd_v.sh  pretrain_deit_tiny_fdb1k_dali_ssd_v.sh  pretrain_deit_tiny_fdb1k_pytorch_render_portion_to_ssd_v.sh  pretrain_deit_tiny_fdb1k_pytorch_render_to_ssd_v.sh  pretrain_deit_tiny_fdb1k_pytorch_ssd_a.sh  pretrain_deit_tiny_fdb1k_pytorch_ssd_v.sh  pretrain_deit_tiny_fdb21k_pytorch_render_to_ssd_v.sh
models/: load_local_pretrained_model.py
myfolder/: FolderNumberToIdx.py
myloader/: loader.py
render_engines/fdb/: OpenMP_Test.c  cpubench.py  ifs_search_egl.py  mpi_cpu.py  mpi_cpu_ramtest.py  mpi_gpu.py  mpi_gpu_ramtest.py  mpi_ifs_search_egl.py  mpishared.py  spawn_mpi_cpu_ramtest.py  spawn_mpi_gpu_ramtest.py  ssd  ssd_v  test_spawn_mpi.py
render_engines/fdb/csv/: ssd  ssd_0
render_engines/fdb/ed_fractal2d_cpu/: CMakeLists.txt  Fractal2DCategorySearcher.cpp  Fractal2DCategorySearcherGrid.cpp  Fractal2DGenData.py  Fractal2DRenderer_cpu.cpp  Fractal2DRenderer_cpu.h  IFSMap.h  PyFractal2DRenderer.cpp  loadata.py  readme.md  setup.py  test.py
render_engines/fdb/scripts/: render_ssd.sh
scheduler/: scheduler_factory.py
scripts/: benchspeed_deit_tiny_fdb100k_pytorch_portionrender_v.sh  benchspeed_deit_tiny_fdb100k_pytorch_v.sh  benchspeed_deit_tiny_fdb100k_pytorch_wds_v.sh  benchspeed_deit_tiny_fdb21k_pytorch_v.sh  benchspeed_deit_tiny_fdb300k_pytorch_portionrender_v.sh  benchspeed_deit_tiny_fdb50k_pytorch_portionrender_v.sh  benchspeed_deit_tiny_fdb50k_pytorch_v.sh  finetune_dali_cars_v.sh  finetune_dali_cifar100_v.sh  finetune_dali_cifar10_v.sh  finetune_dali_flowers_v.sh  finetune_dali_imnet100_v.sh  finetune_dali_imnet_v.sh  finetune_dali_p30_v.sh  finetune_dali_voc12_v.sh  finetune_imnet1k.sh  finetune_pytorch_cars_v.sh  finetune_pytorch_cifar10.sh  finetune_pytorch_cifar100_v.sh  finetune_pytorch_cifar10_v.sh  finetune_pytorch_flowers_v.sh  finetune_pytorch_imnet100_v.sh  finetune_pytorch_imnet_v.sh  finetune_pytorch_p30_v.sh  finetune_pytorch_voc12_v.sh  pretrain_deit_base_21ktest_pytorch_wds_v.sh  pretrain_deit_base_fdb21k_dali_render_to_ssd_v.sh  pretrain_deit_base_fdb21k_pytorch_render_to_ssd_v.sh  pretrain_deit_tiny_fdb100k_pytorch_render_to_ssd_v.sh  pretrain_deit_tiny_fdb1k_dali_render_to_ssd_v.sh  pretrain_deit_tiny_fdb1k_dali_ssd_a.sh  pretrain_deit_tiny_fdb1k_dali_ssd_v.sh  pretrain_deit_tiny_fdb1k_pytorch_cpuRAMFake_v.sh  pretrain_deit_tiny_fdb1k_pytorch_render_to_ssd_v.sh  pretrain_deit_tiny_fdb1k_pytorch_ssd_v.sh  pretrain_deit_tiny_fdb21k_dali_render_to_ssd_v.sh  pretrain_deit_tiny_fdb21k_pytorch_render_portion_to_ssd_v.sh  pretrain_deit_tiny_fdb21k_pytorch_render_to_ssd_v.sh  pretrain_deit_tiny_fdb50k_pytorch_render_to_ssd_v.sh  render_FractalDB_benchmark.sh  (+2 more)
utils/: dataset_utils2.py
